derive/tests/snapshots/multiple_dsl_attributes/Module/pass_1/get_all_modules1.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `module1` table.
    pub fn get_all_modules1<'a>(&'a self) -> impl Iterator<Item = Module> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().module1().iter()
    }
}
