derive/tests/snapshots/multiple_dsl_attributes/Module/pass_1/table.snap
---
source: derive/src/characterization_tests.rs
---
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct ModuleId {
    value: u64,
}
impl Default for ModuleId {
    fn default() -> ModuleId {
        ModuleId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for ModuleId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "ModuleId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for ModuleId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Module> for ModuleId {
    fn from(value: &Module) -> Self {
        ModuleId {
            value: value.id.clone(),
        }
    }
}
impl From<&Module> for Option<ModuleId> {
    fn from(value: &Module) -> Option<ModuleId> {
        Some(ModuleId {
            value: value.id.clone(),
        })
    }
}
impl From<&ModuleId> for Option<ModuleId> {
    fn from(value: &ModuleId) -> Option<ModuleId> {
        use crate::spacetimedsl::Wrapper;
        Some(ModuleId::new(value.value()))
    }
}
impl From<&ModuleId> for ModuleId {
    fn from(value: &ModuleId) -> Self {
        use crate::spacetimedsl::Wrapper;
        ModuleId::new(value.value())
    }
}
impl Module {
    ///
    pub fn get_id(&self) -> ModuleId {
        use crate::spacetimedsl::Wrapper;
        ModuleId::new(self.id.clone())
    }
    ///
    pub fn get_database_id(&self) -> &u64 {
        use crate::spacetimedsl::Wrapper;
        &self.database_id
    }
    ///
    pub fn get_database_id_mut(&mut self) -> &mut u64 {
        use crate::spacetimedsl::Wrapper;
        &mut self.database_id
    }
    ///
    pub fn set_database_id(&mut self, database_id: u64) -> u64 {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.database_id, database_id);
        old_value
    }
    ///
    pub fn get_name(&self) -> &String {
        use crate::spacetimedsl::Wrapper;
        &self.name
    }
    ///
    pub fn get_name_mut(&mut self) -> &mut String {
        use crate::spacetimedsl::Wrapper;
        &mut self.name
    }
    ///
    pub fn set_name(&mut self, name: String) -> String {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.name, name);
        old_value
    }
}
///
pub struct CreateModule1 {
    pub database_id: u64,
    pub name: String,
}

// Generated DSL methods:
// count_of_all_modules1
// create_module1
// delete_module1_by_database_and_name
// delete_module1_by_id
// get_all_modules1
// get_module1_by_database_and_name
// get_module1_by_id
// update_module1_by_id
