derive/tests/snapshots/multiple_dsl_attributes/Module/pass_1/update_module1_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to update a `Module` row of the `module1` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn update_module1_by_id<'a>(
        &'a self,
        module1: Module,
    ) -> Result<Module, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let mut module1 = module1;
        let mut the_same_or_another_module1: Option<Module> = None;
        the_same_or_another_module1 = match self
            .db()
            .module1()
            .database_and_name()
            .filter((module1.database_id, &module1.name))
            .at_most_one()
        {
            Ok(module1) => module1,
            Err(_) => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                    table_name: "module1".into(),
                    action: crate::spacetimedsl::error::Action::Update,
                    error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDSL,
                    one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::Multiple,
                    column_names_and_row_values: format!(
                        "{{ database_id : {}, name : {} }}", module1.database_id, &
                        module1.name
                    )
                        .into(),
                });
            }
        };
        match &the_same_or_another_module1 {
            Some(the_same_or_another_module1) => {
                if the_same_or_another_module1.id.ne(&module1.id) {
                    return Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                        table_name: "module1".into(),
                        action: crate::spacetimedsl::error::Action::Update,
                        error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDSL,
                        one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::Multiple,
                        column_names_and_row_values: format!(
                            "{{ database_id : {}, name : {} }}", module1.database_id, &
                            module1.name
                        )
                            .into(),
                    });
                }
            }
            _ => {}
        };
        let module1 = self.db().module1().id().update(module1);
        Ok(module1)
    }
}
